k8/saltea-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saltea-frontend
  namespace: default
  labels:
    app: saltea-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saltea-frontend
  template:
    metadata:
      labels:
        app: saltea-frontend
    spec:
      containers:
        - name: saltea-frontend
          image: localhost:32000/dna-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
